WSEP-243 Numbering overlapping like/comment/flag buttons added padding to the bottom of the feed to fix

--- a/sites/all/themes/atwork_zen/sass/components/misc/_activity_feed.scss
+++ b/sites/all/themes/atwork_zen/sass/components/misc/_activity_feed.scss
@@ -216,6 +216,7 @@
     clear: both;
     display: block;
     margin-top: .8em;
+    padding-bottom: 2em;
   }
   #atwork-activity-customize-feed-form .description {
     margin-bottom: 1em;
